--- a/templates/login.html
+++ b/templates/login.html
@@ -1,140 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Webpage Title -->
+    <title>Log In | SWEETER</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <meta property="og:title" content="스위터 - 세상을 달달하게"/>
+    <meta property="og:description" content="mini project for Web Plus"/>
+    <meta property="og:image" content="{{ url_for('static', filename='ogimg.png') }}"/>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <!-- Bulma CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <!-- Font Awesome CSS -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Stylish&display=swap" rel="stylesheet">
 
-    <title>카핑꿀템 - 핑미!</title>
-    <link href="https://fonts.googleapis.com/css2?family=Hi+Melody&display=swap" rel="stylesheet">
-    <style>
-        .title {
+    <!-- JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
-        }
-
-        .pic {
-            width: 250px;
-            height: 250px;
-            margin: 20px auto 20px auto;
-
-            color: white;
-
-            text-align: center;
-
-            background-image: url("https://images.unsplash.com/photo-1583872958183-1ea5ed461f04?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGNhciUyMGNhbXBpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
-            background-size: cover;
-            background-position: center;
-
-            border-radius: 150px;
-
-            padding-top: 40px;
-        }
-
-        .wrap {
-            width: 95%;
-            max-width: 500px;
-            margin: 150px auto;
-
-            box-shadow: 0px 0px 3px 0px black;
-            padding: 20px;
-            border-radius: 50px;
-
-            background-color: #243665;
-        }
-
-        .login {
-            max-width: 350px;
-            width: 95%;
-            margin: 50px auto 30px auto;
-
-
-            background-color: #243665;
-            background-size: 500px;
-        }
-
-        .form-control {
-            border-radius: 20px;
-        }
-
-        .loginbtn {
-            margin: 20px auto 50px auto;
-
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .login > label {
-
-        }
-
-        .loginbtn > button {
-            margin-top: 20px;
-            margin-right: 10px;
-        }
-
-        .inin {
-            width: 230px;
-            height: 45px;
-            border: 2px solid darkgreen;
-            border-radius: 30px;
-
-            background-color: #8BD8BD;
-        }
-
-        .inin:hover {
-            border: 2px solid white;
-        }
-    </style>
     <script>
-        function sign_in() {
-            let username = $("#input-username").val()
-            let password = $("#input-password").val()
+        // {% if msg %}
+            //    alert("{{ msg }}")
+            // {% endif %}
 
+        function toggle_sign_up() {
+            $("#sign-up-box").toggleClass("is-hidden")
+            $("#div-sign-in-or-up").toggleClass("is-hidden")
+            $("#btn-check-dup").toggleClass("is-hidden")
+            $("#help-id").toggleClass("is-hidden")
+            $("#help-password").toggleClass("is-hidden")
+            $("#help-password2").toggleClass("is-hidden")
+        }
+
+        function is_nickname(asValue) {
+            var regExp = /^(?=.*[a-zA-Z])[-a-zA-Z0-9_.]{2,10}$/;
+            return regExp.test(asValue);
+        }
+
+        function is_password(asValue) {
+            var regExp = /^(?=.*\d)(?=.*[a-zA-Z])[0-9a-zA-Z!@#$%^&*]{8,20}$/;
+            return regExp.test(asValue);
+        }
+
+        function check_dup() {
+            let username = $("#input-username").val()
+            console.log(username)
             if (username == "") {
-                $("#help-id-login").text("아이디를 입력해주세요.")
+                $("#help-id").text("아이디를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
                 $("#input-username").focus()
                 return;
-            } else {
-                $("#help-id-login").text("")
             }
-
-            if (password == "") {
-                $("#help-password-login").text("비밀번호를 입력해주세요.")
-                $("#input-password").focus()
+            if (!is_nickname(username)) {
+                $("#help-id").text("아이디의 형식을 확인해주세요. 영문과 숫자, 일부 특수문자(._-) 사용 가능. 2-10자 길이").removeClass("is-safe").addClass("is-danger")
+                $("#input-username").focus()
                 return;
-            } else {
-                $("#help-password-login").text("")
             }
+            $("#help-id").addClass("is-loading")
             $.ajax({
                 type: "POST",
-                url: "/sign_in",
+                url: "/sign_up/check_dup",
                 data: {
-                    username_give: username,
-                    password_give: password
+                    username_give: username
                 },
                 success: function (response) {
-                    if (response['result'] == 'success') {
-                        $.cookie('mytoken', response['token'], {path: '/'});
-                        window.location.replace("/")
+
+                    if (response["exists"]) {
+                        $("#help-id").text("이미 존재하는 아이디입니다.").removeClass("is-safe").addClass("is-danger")
+                        $("#input-username").focus()
                     } else {
-                        alert(response['msg'])
+                        $("#help-id").text("사용할 수 있는 아이디입니다.").removeClass("is-danger").addClass("is-success")
                     }
+                    $("#help-id").removeClass("is-loading")
+
                 }
             });
         }
@@ -191,63 +135,98 @@
 
         }
 
-        function toggle_sign_up() {
-            $("#sign-up-box").toggleClass("is-hidden")
-            $("#div-sign-in-or-up").toggleClass("is-hidden")
-            $("#btn-check-dup").toggleClass("is-hidden")
-            $("#help-id").toggleClass("is-hidden")
-            $("#help-password").toggleClass("is-hidden")
-            $("#help-password2").toggleClass("is-hidden")
-        }
-
-        function is_nickname(asValue) {
-            var regExp = /^(?=.*[a-zA-Z])[-a-zA-Z0-9_.]{2,10}$/;
-            return regExp.test(asValue);
-        }
-
-        function is_password(asValue) {
-            var regExp = /^(?=.*\d)(?=.*[a-zA-Z])[0-9a-zA-Z!@#$%^)&*(-]{8,20}$/;
-            return regExp.test(asValue);
-        }
-
-        function check_dup() {
+        function sign_in() {
             let username = $("#input-username").val()
-            console.log(username)
+            let password = $("#input-password").val()
+
             if (username == "") {
-                $("#help-id").text("아이디를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#help-id-login").text("아이디를 입력해주세요.")
                 $("#input-username").focus()
                 return;
+            } else {
+                $("#help-id-login").text("")
             }
-            if (!is_nickname(username)) {
-                $("#help-id").text("아이디의 형식을 확인해주세요. 영문과 숫자, 일부 특수문자(._-) 사용 가능. 2-10자 길이").removeClass("is-safe").addClass("is-danger")
-                $("#input-username").focus()
+
+            if (password == "") {
+                $("#help-password-login").text("비밀번호를 입력해주세요.")
+                $("#input-password").focus()
                 return;
+            } else {
+                $("#help-password-login").text("")
             }
-            $("#help-id").addClass("is-loading")
             $.ajax({
                 type: "POST",
-                url: "/sign_up/check_dup",
+                url: "/sign_in",
                 data: {
-                    username_give: username
+                    username_give: username,
+                    password_give: password
                 },
                 success: function (response) {
-
-                    if (response["exists"]) {
-                        $("#help-id").text("이미 존재하는 아이디입니다.").removeClass("is-safe").addClass("is-danger")
-                        $("#input-username").focus()
+                    if (response['result'] == 'success') {
+                        $.cookie('mytoken', response['token'], {path: '/'});
+                        window.location.replace("/")
                     } else {
-                        $("#help-id").text("사용할 수 있는 아이디입니다.").removeClass("is-danger").addClass("is-success")
+                        alert(response['msg'])
                     }
-                    $("#help-id").removeClass("is-loading")
-
                 }
             });
         }
 
-        function register() {
-            window.location.replace('register.html')
-        }
     </script>
+
+    <style>
+        .title {
+
+        }
+
+        .pic {
+            width: 250px;
+            height: 250px;
+            margin: 20px auto 20px auto;
+
+            color: white;
+
+            text-align: center;
+
+            background-image: url("https://images.unsplash.com/photo-1583872958183-1ea5ed461f04?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGNhciUyMGNhbXBpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+            background-size: cover;
+            background-position: center;
+
+            border-radius: 150px;
+
+            padding-top: 40px;
+        }
+
+        .wrap {
+            width: 95%;
+            max-width: 500px;
+            margin: 150px auto;
+
+            box-shadow: 0px 0px 3px 0px black;
+            padding: 20px;
+            border-radius: 50px;
+
+            background-color: #243665;
+        }
+
+        .button.is-sparta {
+            background-color: #8BD8BD;
+            border-color: transparent;
+            color: #fff !important;
+        }
+
+        .button.is-sparta.is-outlined {
+            background-color: transparent;
+            border-color: #8BD8BD;
+            color: #8BD8BD !important;
+        }
+
+        .help {
+            color: gray;
+        }
+
+    </style>
+
 </head>
 <body>
 <div class="wrap">
@@ -257,20 +236,85 @@
     <div class="pic">
 
     </div>
-    <div class="login">
-        <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">ID를 입력하세요</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">비밀번호를 입력하세요</label>
-        </div>
-        <div class="loginbtn">
-            <button class="inin">로그인</button>
-            <button type="button" class="btn btn-outline-light" onclick="register()">회원가입</button>
-        </div>
-    </div>
+     <section class="section">
+            <div class="container">
+                <div class="box" style="max-width: 480px;margin:auto;background-color:darkslateblue">
+                    <article class="media">
+                        <div class="media-content">
+                            <div class="content">
+                                <div class="field has-addons">
+                                    <div class="control has-icons-left" style="width:100%">
+                                        <input id="input-username" class="input" type="text" placeholder="아이디">
+                                        <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
+                                    </div>
+                                    <div id="btn-check-dup" class="control is-hidden">
+                                        <button class="button is-sparta" onclick="check_dup()">중복확인</button>
+                                    </div>
+
+                                </div>
+                                <p id="help-id" class="help is-hidden" style="color:navajowhite;font-size:x-small;">아이디는 2-10자의 영문과 숫자와 일부 특수문자(._-)만 입력 가능합니다.</p>
+                                <p id="help-id-login" class="help is-danger"></p>
+
+                                <div class="field">
+                                    <div class="control has-icons-left">
+                                        <input id="input-password" class="input" type="password" placeholder="비밀번호">
+                                        <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
+                                    </div>
+                                    <p id="help-password" class="help is-hidden" style="color:navajowhite;font-size:x-small;">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요.
+                                        특수문자(!@#$%^&*)도 사용 가능합니다.</p>
+                                    <p id="help-password-login" class="help is-danger"></p>
+
+                                </div>
+
+
+                            </div>
+                            <div id="div-sign-in-or-up" class="has-text-centered">
+                                <nav class="level is-mobile">
+                                    <button class="level-item button is-sparta" onclick="sign_in()">
+                                        로그인
+                                    </button>
+
+                                </nav>
+                                <hr>
+                                <h4 class="mb-3" style="color:white;">아직 회원이 아니라면</h4>
+                                <nav class="level is-mobile">
+
+                                    <button class="level-item button is-sparta is-outlined"
+                                            onclick="toggle_sign_up()">
+                                        회원가입하기
+                                    </button>
+                                </nav>
+                            </div>
+
+                            <div id="sign-up-box" class="is-hidden">
+                                <div class="mb-5">
+                                    <div class="field">
+                                        <div class="control has-icons-left" style="width:100%">
+                                            <input id="input-password2" class="input" type="password"
+                                                   placeholder="비밀번호 재입력">
+                                            <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
+                                        </div>
+                                        <p id="help-password2" class="help is-hidden" style="color:navajowhite;font-size:x-small;">비밀번호를 다시 한 번 입력해주세요.</p>
+
+                                    </div>
+                                </div>
+                                <nav class="level is-mobile">
+                                    <button class="level-item button is-sparta" onclick="sign_up()">
+                                        회원가입
+                                    </button>
+                                    <button class="level-item button is-sparta is-outlined" onclick="toggle_sign_up()">
+                                        취소
+                                    </button>
+                                </nav>
+                            </div>
+
+
+                        </div>
+                    </article>
+                </div>
+
+            </div>
+        </section>
 </div>
 </body>
 </html>
