로그인 페이지 (로고 이미지 추가, 로그인 섹션 색깔 변경)

--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Stylish&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@700&display=swap" rel="stylesheet">
 
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -188,7 +189,7 @@
 
             text-align: center;
 
-            background-image: url("https://images.unsplash.com/photo-1583872958183-1ea5ed461f04?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGNhciUyMGNhbXBpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+            background-image: url("/static/car.png");
             background-size: cover;
             background-position: center;
 
@@ -231,14 +232,14 @@
 <body>
 <div class="wrap">
     <div class="title">
-        <h1 style="color:white;">PingMe!</h1>
+
     </div>
     <div class="pic">
 
     </div>
      <section class="section">
             <div class="container">
-                <div class="box" style="max-width: 480px;margin:auto;background-color:darkslateblue">
+                <div class="box" style="max-width: 480px;margin:auto;background-color:#243665">
                     <article class="media">
                         <div class="media-content">
                             <div class="content">
