--- a/templates/login.html
+++ b/templates/login.html
@@ -35,7 +35,9 @@
             $("#sign-up-box").toggleClass("is-hidden")
             $("#div-sign-in-or-up").toggleClass("is-hidden")
             $("#btn-check-dup").toggleClass("is-hidden")
+            $("#btn-check-nick").toggleClass("is-hidden")
             $("#help-id").toggleClass("is-hidden")
+            $("#help-nick").toggleClass("is-hidden")
             $("#help-password").toggleClass("is-hidden")
             $("#help-password2").toggleClass("is-hidden")
         }
@@ -85,6 +87,7 @@
         }
 
         function sign_up() {
+            let nickname = $("#input-nickname").val()
             let username = $("#input-username").val()
             let password = $("#input-password").val()
             let password2 = $("#input-password2").val()
@@ -121,12 +124,18 @@
             } else {
                 $("#help-password2").text("비밀번호가 일치합니다.").removeClass("is-danger").addClass("is-success")
             }
+
+            if (!$("#help-nick").hasClass("is-success")) {
+                alert("닉네임 중복확인을 해주세요.")
+                return;
+            }
             $.ajax({
                 type: "POST",
                 url: "/sign_up/save",
                 data: {
                     username_give: username,
-                    password_give: password
+                    password_give: password,
+                    nickname_give: nickname
                 },
                 success: function (response) {
                     alert("회원가입을 축하드립니다!")
@@ -134,6 +143,35 @@
                 }
             });
 
+        }
+
+        function check_nick() {
+            let nickname = $("#input-nickname").val()
+            console.log(nickname)
+            if (nickname == "") {
+                $("#help-nick").text("닉네임을 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-nickname").focus()
+                return;
+            }
+
+            $.ajax({
+                type: "POST",
+                url: "/sign_up/check_nick",
+                data: {
+                    nickname_give: nickname
+                },
+                success: function (response) {
+
+                    if (response["exists"]) {
+                        $("#help-nick").text("이미 존재하는 닉네임입니다.").removeClass("is-safe").addClass("is-danger")
+                        $("#input-nickname").focus()
+                    } else {
+                        $("#help-nick").text("사용할 수 있는 닉네임입니다.").removeClass("is-danger").addClass("is-success")
+                    }
+                    $("#help-nick").removeClass("is-loading")
+
+                }
+            });
         }
 
         function sign_in() {
@@ -237,85 +275,93 @@
     <div class="pic">
 
     </div>
-     <section class="section">
-            <div class="container">
-                <div class="box" style="max-width: 480px;margin:auto;background-color:#243665">
-                    <article class="media">
-                        <div class="media-content">
-                            <div class="content">
-                                <div class="field has-addons">
-                                    <div class="control has-icons-left" style="width:100%">
-                                        <input id="input-username" class="input" type="text" placeholder="아이디">
-                                        <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
-                                    </div>
-                                    <div id="btn-check-dup" class="control is-hidden">
-                                        <button class="button is-sparta" onclick="check_dup()">중복확인</button>
-                                    </div>
-
+    <section class="section">
+        <div class="container">
+            <div class="box" style="max-width: 480px;margin:auto;background-color:#243665">
+                <article class="media">
+                    <div class="media-content">
+                        <div class="content">
+                            <div class="field has-addons">
+                                <div class="control has-icons-left" style="width:100%">
+                                    <input id="input-username" class="input" type="text" placeholder="아이디">
+                                    <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
                                 </div>
-                                <p id="help-id" class="help is-hidden" style="color:navajowhite;font-size:x-small;">아이디는 2-10자의 영문과 숫자와 일부 특수문자(._-)만 입력 가능합니다.</p>
-                                <p id="help-id-login" class="help is-danger"></p>
+                                <div id="btn-check-dup" class="control is-hidden">
+                                    <button class="button is-sparta" onclick="check_dup()">중복확인</button>
+                                </div>
+                            </div>
+                            <p id="help-id" class="help is-hidden" style="color:navajowhite;font-size:x-small;">아이디는
+                                2-10자의 영문과 숫자와 일부 특수문자(._-)만 입력 가능합니다.</p>
+                            <p id="help-id-login" class="help is-danger"></p>
+                            <div class="field">
+                                <div class="control has-icons-left">
+                                    <input id="input-password" class="input" type="password" placeholder="비밀번호">
+                                    <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
+                                </div>
+                                <p id="help-password" class="help is-hidden"
+                                   style="color:navajowhite;font-size:x-small;">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요.
+                                    특수문자(!@#$%^&*)도 사용 가능합니다.</p>
+                                <p id="help-password-login" class="help is-danger"></p>
 
+                            </div>
+                        </div>
+                        <div id="div-sign-in-or-up" class="has-text-centered">
+                            <nav class="level is-mobile">
+                                <button class="level-item button is-sparta" onclick="sign_in()">
+                                    로그인
+                                </button>
+                            </nav>
+                            <hr>
+                            <h4 class="mb-3" style="color:white;">아직 회원이 아니라면</h4>
+                            <nav class="level is-mobile">
+
+                                <button class="level-item button is-sparta is-outlined"
+                                        onclick="toggle_sign_up()">
+                                    회원가입하기
+                                </button>
+                            </nav>
+                        </div>
+
+                        <div id="sign-up-box" class="is-hidden">
+                            <div class="mb-5">
                                 <div class="field">
-                                    <div class="control has-icons-left">
-                                        <input id="input-password" class="input" type="password" placeholder="비밀번호">
+                                    <div class="control has-icons-left" style="width:100%">
+                                        <input id="input-password2" class="input" type="password"
+                                               placeholder="비밀번호 재입력">
                                         <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
                                     </div>
-                                    <p id="help-password" class="help is-hidden" style="color:navajowhite;font-size:x-small;">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요.
-                                        특수문자(!@#$%^&*)도 사용 가능합니다.</p>
-                                    <p id="help-password-login" class="help is-danger"></p>
-
+                                    <p id="help-password2" class="help is-hidden"
+                                       style="color:navajowhite;font-size:x-small;">비밀번호를 다시 한 번 입력해주세요.</p>
                                 </div>
-
-
                             </div>
-                            <div id="div-sign-in-or-up" class="has-text-centered">
-                                <nav class="level is-mobile">
-                                    <button class="level-item button is-sparta" onclick="sign_in()">
-                                        로그인
-                                    </button>
-
-                                </nav>
-                                <hr>
-                                <h4 class="mb-3" style="color:white;">아직 회원이 아니라면</h4>
-                                <nav class="level is-mobile">
-
-                                    <button class="level-item button is-sparta is-outlined"
-                                            onclick="toggle_sign_up()">
-                                        회원가입하기
-                                    </button>
-                                </nav>
-                            </div>
-
-                            <div id="sign-up-box" class="is-hidden">
-                                <div class="mb-5">
-                                    <div class="field">
-                                        <div class="control has-icons-left" style="width:100%">
-                                            <input id="input-password2" class="input" type="password"
-                                                   placeholder="비밀번호 재입력">
-                                            <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
-                                        </div>
-                                        <p id="help-password2" class="help is-hidden" style="color:navajowhite;font-size:x-small;">비밀번호를 다시 한 번 입력해주세요.</p>
-
+                            <div>
+                                <div class="field has-addons">
+                                    <div class="control has-icons-left" style="width:100%">
+                                        <input id="input-nickname" class="input" type="text" placeholder="닉네임">
+                                        <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
+                                    </div>
+                                    <div id="btn-check-nick" class="control is-hidden">
+                                        <button class="button is-sparta" onclick="check_nick()">중복확인</button>
                                     </div>
                                 </div>
-                                <nav class="level is-mobile">
-                                    <button class="level-item button is-sparta" onclick="sign_up()">
-                                        회원가입
-                                    </button>
-                                    <button class="level-item button is-sparta is-outlined" onclick="toggle_sign_up()">
-                                        취소
-                                    </button>
-                                </nav>
+                                <p id="help-nick" class="help is-hidden" style="color:navajowhite;font-size:x-small;">본인만의 재미있는 닉네임을 설정해주세요!</p>
                             </div>
 
-
+                            <nav class="level is-mobile" style="margin-top:20px;">
+                                <button class="level-item button is-sparta" onclick="sign_up()">
+                                    회원가입
+                                </button>
+                                <button class="level-item button is-sparta is-outlined" onclick="toggle_sign_up()">
+                                    취소
+                                </button>
+                            </nav>
                         </div>
-                    </article>
-                </div>
-
+                    </div>
+                </article>
             </div>
-        </section>
+
+        </div>
+    </section>
 </div>
 </body>
 </html>
