--- a/feature:view/backup_01/templates/index.html
+++ b/feature:view/backup_01/templates/index.html
@@ -137,84 +137,83 @@
 </style>
 <script>
 
-    $(document).ready(function () {
-        listing()
-    })
-
-    function listing() {
-        $.ajax({
-            type: "GET",
-            url: "/main",
-            data: {},
-            success: function (response) {
-                let capingtems = response['all_capingtem']
-                for (let i = 0; i < capingtems.length; i++) {
-                    let title = capingtems[i]['title']
-                    let category = capingtems[i]['category']
-                    let price = capingtems[i]['price']
-                    let comment = capingtems[i]['comment']
-                    let file = capingtems[i]['file']
-                    let starpoints = capingtems[i]['category']
-
-                    let temp_html = `<div class="card h-100">
-                                        <img width="300" height="250" alt="${title}"
-                                             src="../static/${file}">
-                                        <div class="card-body">
-                                            <h5 class="card-title">${title}</h5>
-                                            <p class="card-category">${category}</p>
-                                            <p class="card-price">${price}</p>
-                                            <p class="card-star">${starpoints}</p>
-                                            <p class="mycomment">${comment}</p>
-                                        </div>
-                                    </div>`
-                    $('#cards-box').append(temp_html)
-                    window.location.reload()
-
-                }
-            }
-        })
-    }
-
     /* 모달 창 JS 코드 시작 */
 
-    /* 파일 업로드 코드 */
+    {#/* 파일 업로드 코드 */#}
     {#$(document).ready(function () {#}
-    {#   bsCustomFileInput.init()#}
+    {#    bsCustomFileInput.init()#}
     /*{#})#}*/
 
-        /* 포스트 저장 데이터 보내기 */
-        function savePost() {
-            let file = $('#post-file')[0].files[0]
-            let form_data = new FormData();
+    /* 포스트 저장 데이터 보내기 */
 
-            let title = $('#post-title').val();
-            let category = $('#post-category').val();
-            let price = $('#post-price').val();
-            let starPoints = $('#post-starpoints').val();
-            let comment = $('#post-comment').val();
+    function savePost() {
+        let file = $('#post-file')[0].files[0]
+        let form_data = new FormData();
 
-            form_data.append("file_give", file)
-            form_data.append("title_give", title)
-            form_data.append("category_give", category)
-            form_data.append("price_give", price)
-            form_data.append("starPoints_give", starPoints)
-            form_data.append("comment_give", comment)
+        let title = $('#post-title').val();
+        let category = $('#post-category').val();
+        let price = $('#post-price').val();
+        let starPoints = $('#post-starpoints').val();
+        let comment = $('#post-comment').val();
 
-            $.ajax({
-                type: "POST",
-                url: "/savepost",
-                data: form_data,
-                cache: false,
-                contentType: false,
-                processData: false,
-                success: function (response) {
-                    alert(response["msg"])
-                    $('.modal').addClass("hidden");
-                }
-            });
-        }
+        form_data.append("file_give", file)
+        form_data.append("title_give", title)
+        form_data.append("category_give", category)
+        form_data.append("price_give", price)
+        form_data.append("starPoints_give", starPoints)
+        form_data.append("comment_give", comment)
+
+        $.ajax({
+            type: "POST",
+            url: "/savepost",
+            data: form_data,
+            cache: false,
+            contentType: false,
+            processData: false,
+            success: function (response) {
+                alert(response["msg"])
+                $('.modal').addClass("hidden");
+            }
+        });
+    }
 
     /* 모달 창 JS 코드 마무리 */
+
+        function listing() {
+            $.ajax({
+                type: "GET",
+                url: "/main",
+                data: {},
+                success: function (response) {
+                    let capingtems = response['all_capingtem']
+                    for (let i = 0; i < capingtems.length; i++) {
+                        let num = capingtems[i]['num']
+                        let title = capingtems[i]['title']
+                        let category = capingtems[i]['category']
+                        let price = capingtems[i]['price']
+                        let comment = capingtems[i]['comment']
+                        let file = capingtems[i]['img']
+                        let starpoints = capingtems[i]['category']
+
+                        let temp_html = `<div class="card h-100">
+
+                                            <img src="../static/${file}" class="card-img-top">">
+                                            <div class="card-body">
+                                                <h5 class="card-title">${title}</h5>
+                                                <p class="card-num">${num}</p>
+                                                <p class="card-category">${category}</p>
+                                                <p class="card-price">${price}</p>
+                                                <p class="card-star">${starpoints}</p>
+                                                <p class="mycomment">${comment}</p>
+                                            </div>
+                                        </div>`
+                        $('#cards-box').append(temp_html)
+                        window.location.reload()
+
+                    }
+                }
+            })
+        }
 
 </script>
 
