--- a/templates/index.html
+++ b/templates/index.html
@@ -336,7 +336,7 @@
                     let price = capingtems[i]['price']
                     let comment = capingtems[i]['comment']
                     let img = capingtems[i]['img']
-                    let starpoints = capingtems[i]['category']
+                    let starpoints = capingtems[i]['starpoints']
 
                     let temp_html = `<div class="card h-100">
                                         <img width="250" height="200" alt="${title}"
@@ -397,6 +397,15 @@
 
     /* 모달 창 JS 코드 마무리 */
 
+
+   /* 로그아웃 함수 */
+        function logout(){
+            $.removeCookie('mytoken',{path:'/'});
+            alert ('로그아웃!!')
+            window.location.href = "/login"
+            {#replace("/login")#}
+        }
+
 </script>
 
 <body>
@@ -411,7 +420,7 @@
                 <span>PingMe!</span>
           </div>
           <div class = "logout-btn">
-            <button type = "button" class = "main-header__logout">
+            <button type = "button" class = "main-header__logout" onclick="logout()">
               <i class="fa-solid fa-right-from-bracket"></i>
             </button>
             <span>logout</span>
@@ -484,17 +493,21 @@
                 <!-- select // 별점 선택 -->
                 <div class="select is-primary form-ctrl">
                     <select id="post-starpoints" class="form-ctrl">
-                        <option>별점을 선택하세요.</option>
+                        <option>만족도를 선택해주세요.</option>
                         <option>5</option>
+                        <option>4.5</option>
                         <option>4</option>
+                        <option>3.5</option>
                         <option>3</option>
+                        <option>2.5</option>
                         <option>2</option>
+                        <option>1.5</option>
                         <option>1</option>
                     </select>
                 </div>
                 <!-- input // 한줄평 작성 -->
-                <div><input id="post-comment" class="input is-primary form-ctrl" type="text"
-                                placeholder="상품에 관해 한줄평을 남겨주세요."></div>
+                <div><input id="post-comment" class="input is-primary form-ctrl" type="text" maxlength = "20"
+                                placeholder="상품에 관해 간단한 한줄평을 남겨주세요."></div>
                 </div>
                 <!-- 버튼 뭉치 : 저장하기 + 취소하기 -->
                 <div class="save-page__btn">
