--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+
     <!-- Webpage Title -->
     <title>카핑꿀템-핑미!</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
