서버 코드, 상세페이지 코드 수정

--- a/templates/view.html
+++ b/templates/view.html
@@ -334,7 +334,7 @@
 
 
 <!-- main : comment_post -->
-<div class="comment_list" id="comment_list">
+<div id = "comment_list"class="comment_list" id="comment_list">
     <div class="comment">
         <p> 닉네임 : 강추합니다!!"</p><br>
     </div>
